@@ -54,5 +54,9 @@ the Python code dispatched from <tt>OnTick</tt> can block the chart or not.</p>
 10 seconds.  What you attach the expert to the chart, you can set it<br />
 to what you want.  It's set high for testing; obviously if you have a<br />
 lot of charts with OTMqlPy and set the interval low, it may add a lot<br />
-of work to Mt4.</p></body>
+of work to Mt4.</p>
+
+<hr />
+
+<p>Parent: <a href="Home.html">Home</a></p></body>
 </html>
