@@ -2,18 +2,20 @@
 <html>
 <!-- This file is automatically generated: do not edit. -->
 <head>
-<title>Libraries</title>
+<title>Code Libraries</title>
 <meta charset="utf-8">
 </head>
 <body>
-<!-- <h1>Libraries</h1> -->
+<!-- <h1>Code Libraries</h1> -->
 <h3>Libraries</h3>
 
-<p>See MQL4/Libraries/OTMql4/</p>
+<p>See <a href="MQL4/Libraries/OTMql4/">https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Libraries/OTMql4</a></p>
 
 <ul>
 	<li><a href="OTLibPy27.html">OTLibPy27</a></li>
 	<li><a href="OTLibPyLog.html">OTLibPyLog</a></li>
 	<li><a href="OTPyChart.html">OTPyChart</a></li>
-</ul></body>
+</ul>
+<p>This file is automatically generated from the source code: do not edit.</p>
+<hr /></body>
 </html>
