@@ -2,16 +2,18 @@
 <html>
 <!-- This file is automatically generated: do not edit. -->
 <head>
-<title>Scripts</title>
+<title>Code Scripts</title>
 <meta charset="utf-8">
 </head>
 <body>
-<!-- <h1>Scripts</h1> -->
+<!-- <h1>Code Scripts</h1> -->
 <h3>Scripts</h3>
 
 <p>See <a href="MQL4/Scripts/OTMql4/">https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Scripts/OTMql4</a></p>
 
 <ul>
 	<li><a href="OTMql4PyTest.html">OTMql4PyTest</a></li>
-</ul></body>
+</ul>
+<p>This file is automatically generated from the source code: do not edit.</p>
+<hr /></body>
 </html>
