@@ -7,7 +7,7 @@
 </head>
 <body>
 <!-- <h1>Development Style</h1> -->
-<h3>Python Coding Practices</h3>
+<h3>Python Coding Style</h3>
 
 <h4>Type Prefixing</h4>
 
@@ -105,5 +105,9 @@ conflict with built-ins, or most Python standard library modules.</p>
 </tr>
 </table>
 <p>We use a similar prefix notation in theMQL4 library code:<br />
-<a href="https://github.com/OpenTrading/OTMql4Py/wiki/DevelopmentStyle">https://github.com/OpenTrading/OTMql4Py/wiki/DevelopmentStyle</a></p></body>
+<a href="https://github.com/OpenTrading/OTMql4Py/wiki/DevelopmentStyle">https://github.com/OpenTrading/OTMql4Py/wiki/DevelopmentStyle</a></p>
+
+<hr />
+
+<p>Parent: <a href="Home.html">Home</a></p></body>
 </html>
