@@ -7,8 +7,9 @@
 </head>
 <body>
 <!-- <h1>Forum Posts</h1> -->
-<p>On the pages we can gather together the links to any pages or forum postings that discuss the original code.<br />
-We can add followups to forum postings that point back to this project.</p>
+<p>On the pages we can gather together the links to any pages or forum<br />
+postings that discuss the original code.  We can add followups to<br />
+forum postings that point back to this project.</p>
 
 <p><a href="https://sites.google.com/site/prof7bit/metatrader-python-integration/">https://sites.google.com/site/prof7bit/metatrader-python-integration/</a></p>
 
@@ -16,5 +17,9 @@ We can add followups to forum postings that point back to this project.</p>
 
 <p><a href="http://www.forexfactory.com/showthread.php?t=190534">http://www.forexfactory.com/showthread.php?t=190534</a><br />
 "embedding python"<br />
-7bit Aug 13, 2009 2:51pm</p></body>
+7bit Aug 13, 2009 2:51pm</p>
+
+<hr />
+
+<p>Parent: <a href="Home.html">Home</a></p></body>
 </html>
