@@ -13,6 +13,29 @@
 under Metatrader4. Mt4 can make calls into Python, using any of Python's<br />
 commands or imported modules.</p>
 
+<h3>Documentation</h3>
+
+<ul>
+	<li><a href="FrontPage.html">FrontPage</a></li>
+	<li><a href="MetatraderWithPython.html">MetatraderWithPython</a></li>
+	<li><a href="ProjectHistory.html">ProjectHistory</a></li>
+	<li><a href="Usage.html">Usage</a></li>
+	<li><a href="Architecture.html">Architecture</a></li>
+	<li><a href="RoadMap.html">RoadMap</a></li>
+</ul>
+<ul>
+	<li><a href="CodeLibraries.html">CodeLibraries</a></li>
+	<li><a href="CodeScripts.html">CodeScripts</a></li>
+</ul>
+<ul>
+	<li><a href="Testing.html">Testing</a></li>
+	<li><a href="DevelopmentStyle.html">DevelopmentStyle</a></li>
+</ul>
+<ul>
+	<li><a href="TitleIndex.html">TitleIndex</a></li>
+</ul>
+<h3>Project</h3>
+
 <p>Please file any bugs in the issues tracker:<br />
 <a href="https://github.com/OpenTrading/OTMql4Py/issues">https://github.com/OpenTrading/OTMql4Py/issues</a></p>
 
@@ -24,17 +47,6 @@ You will need to be signed into github.com to see or edit in the wiki.</p>
 
 <p>If you know of any threads in the forums that discuss this code,<br />
 please post a message to say this project is now on github.com at<br />
-<a href="https://github.com/OpenTrading/OTMql4Py/">https://github.com/OpenTrading/OTMql4Py/</a></p>
-
-<ul>
-	<li><a href="FrontPage.html">FrontPage</a></li>
-	<li><a href="MetatraderWithPython.html">MetatraderWithPython</a></li>
-	<li><a href="ProjectHistory.html">ProjectHistory</a></li>
-	<li><a href="Usage.html">Usage</a></li>
-	<li><a href="Architecture.html">Architecture</a></li>
-	<li><a href="RoadMap.html">RoadMap</a></li>
-</ul>
-<ul>
-	<li><a href="TitleIndex.html">TitleIndex</a></li>
-</ul></body>
+<a href="https://github.com/OpenTrading/OTMql4Py/">https://github.com/OpenTrading/OTMql4Py/</a><br />
+and add a link to the thread to the <a href="ForumPosts.html">ForumPosts</a> page in the wiki.</p></body>
 </html>
