@@ -46,5 +46,9 @@ rigorous testing, and makes it much easier to maintain. The bridge can<br />
 be also used to feed standard high-speed financial message buses to<br />
 distributed applications (e.g. FITS or ZeroMq): see our OTMlq4Zmq<br />
 project at <a href="https://github.com/OpenTrading/OTMql4Zmq">https://github.com/OpenTrading/OTMql4Zmq</a> and its usage by<br />
-OpenTrader at <a href="https://github.com/OpenTrading/OpenTrader">https://github.com/OpenTrading/OpenTrader</a></p></body>
+OpenTrader at <a href="https://github.com/OpenTrading/OpenTrader">https://github.com/OpenTrading/OpenTrader</a></p>
+
+<hr />
+
+<p>Parent: <a href="Home.html">Home</a></p></body>
 </html>
