@@ -94,5 +94,12 @@ not be exposed to handles of python objects.</p>
 <p><tt>void vPyDeInit() </tt></p>
 
 <p><tt>string uChartName(string uSymbol, int iPeriod, long iWindowId, int iExtra=0) </tt><br />
-    We will need a unique identifier for each chart</p></body>
+    We will need a unique identifier for each chart</p>
+
+<p>Source code: <a href="MQL4/Libraries/OTMql4/OTLibPy27.mq4">https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Libraries/OTMql4/OTLibPy27.mq4</a></p>
+
+<p>This file is automatically generated from the source code: do not edit.</p>
+<hr />
+
+<p>Parent: <a href="CodeLibraries.html">CodeLibraries</a></p></body>
 </html>
