@@ -25,5 +25,12 @@ The Python code can use vLog(iLevel, sMsg) to log accordingly.</p>
 
 <p><tt>void vLog (int iLevel, string uMsg) </tt><br />
     We introduce 6 levels of logging: 0 - 5;<br />
-    a level of 0 is usually a panic and raises a messagebox</p></body>
+    a level of 0 is usually a panic and raises a messagebox</p>
+
+<p>Source code: <a href="MQL4/Libraries/OTMql4/OTLibPyLog.mq4">https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Libraries/OTMql4/OTLibPyLog.mq4</a></p>
+
+<p>This file is automatically generated from the source code: do not edit.</p>
+<hr />
+
+<p>Parent: <a href="CodeLibraries.html">CodeLibraries</a></p></body>
 </html>
