@@ -10,8 +10,8 @@
 <h3>MQL4/Scripts/OTMql4/OTMql4PyTest.mq4</h3>
 
 <p>A simple test Script that doesn't do much, but it's a start.<br />
-Attach it to a chart, and a MessageBox will pop up to tell you<br />
-if it passed or failed.<br />
+Attach it to a chart, select the tests you want to run,<br />
+and a MessageBox will pop up to tell you if it passed or failed.<br />
 We will put each test as a boolean external input so the user<br />
 can select which tests to run.</p>
 
@@ -39,5 +39,11 @@ can select which tests to run.</p>
     BUT we have no way of telling if the OnStart is called from a recompile.<br />
     We are also seeing iReason == 0 when Mt4 sees a script has been recompiled.</p>
 
-<p>Source code: <a href="MQL4/Scripts/OTMql4/OTMql4PyTest.mq4">https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Scripts/OTMql4/OTMql4PyTest.mq4</a></p></body>
+<p>Source code: <a href="MQL4/Scripts/OTMql4/OTMql4PyTest.mq4">https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Scripts/OTMql4/OTMql4PyTest.mq4</a></p>
+
+<p>This file is automatically generated from the source code: do not edit.</p>
+<hr />
+
+<p>Parent: <a href="CodeScripts.html">CodeScripts</a><br />
+Parent: <a href="Home.html">Home</a></p></body>
 </html>
