@@ -13,5 +13,13 @@
 
 <p><tt>string eReturnOnPub(string uChartId, string uType, string uMess, string uOriginCmd="") </tt></p>
 
-<p><tt>string eReturnOnReqRep(string uChartId, string uType, string uMess, string uOriginCmd="") </tt></p></body>
+<p><tt>string eReturnOnReqRep(string uChartId, string uType, string uMess, string uOriginCmd="") </tt></p>
+
+<p>Source code: <a href="MQL4/Libraries/OTMql4/OTPyChart.mq4">https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Libraries/OTMql4/OTPyChart.mq4</a></p>
+
+<p>This file is automatically generated from the source code: do not edit.</p>
+<hr />
+
+<p>Parent: <a href="CodeLibraries.html">CodeLibraries</a><br />
+Parent: <a href="Home.html">Home</a></p></body>
 </html>
