@@ -28,5 +28,12 @@ ASCII, and introduced a new <tt>unicode</tt> datatype, along with Unicode<br />
 aware functions, usually with the same function name, but with a<br />
 <tt>W</tt> appended, like Windows does. You can still use ASCII strings<br />
 in Metatrader4 &gt;600: they are simply arrays of <tt>uchar</tt>, and there<br />
-are conversion functions such as <tt>StringToCharArray</tt>.</p></body>
+are conversion functions such as <tt>StringToCharArray</tt>.</p>
+
+<ul>
+	<li><a href="SomeNotes.html">SomeNotes</a></li>
+</ul>
+<hr />
+
+<p>Parent: <a href="Home.html">Home</a></p></body>
 </html>
