@@ -17,5 +17,9 @@ OpenTrader at <a href="https://github.com/OpenTrading/OpenTrader">https://github
 Write Mt4 sctipts that can run a series of tests; see <a href="Testing.html">Testing</a>.</p>
 
 <p>2) More testing<br />
-Write Python scripts that can test Python under Mt4.</p></body>
+Write Python scripts that can test Python under Mt4.</p>
+
+<hr />
+
+<p>Parent: <a href="Home.html">Home</a></p></body>
 </html>
