@@ -84,5 +84,9 @@ last EAs <tt>OnDeinit()</tt>, again as above make it wait for all cleaning<br />
 action to be finished before returning, these are the last clock<br />
 cycles that will be spent inside Python because at this time there<br />
 is only one system thread left and if this function returns the<br />
-python interpreter will be frozen and then immediately unloaded.</p></body>
+python interpreter will be frozen and then immediately unloaded.</p>
+
+<hr />
+
+<p>Parent: <a href="ProjectHistory.html">ProjectHistory</a></p></body>
 </html>
