@@ -9,5 +9,6 @@
 <!-- <h1>Tested Versions</h1> -->
 <p>Please report any system it works or doesn't work on in the wiki:<br />
 include the Metatrader build number, the origin of the metatrader exe,<br />
-the Windows version, and the Python version of the Python pyzmq, or whatever the other end is.</p></body>
+the Windows version, and the Python version of the Python pyzmq, or<br />
+whatever the other end is.</p></body>
 </html>
