@@ -7,7 +7,7 @@
 </head>
 <body>
 <!-- <h1>Testing</h1> -->
-<h3>Testing</h3>
+<h2>Testing</h2>
 
 <p>There are some initial tests in the file<br />
 <tt>MQL4/Scripts/OTMql4/OTMql4PyTest.mq4</tt><br />
@@ -21,5 +21,9 @@ word <tt>ERROR:</tt> and should pop up a MessageBox.</p>
 <p>During testing, we have noticed an error when you are repeatedly<br />
 initilizing and uninitializing the Python interpreter. Any call of<br />
 Python generates a <tt>exceptions.SystemError</tt>. You must restart<br />
-Metatrader if this happens.</p></body>
+Metatrader if this happens.</p>
+
+<hr />
+
+<p>Parent: <a href="Home.html">Home</a></p></body>
 </html>
