@@ -11,11 +11,12 @@
 
 <ul>
 	<li><a href="Architecture.html">Architecture</a></li>
+	<li><a href="CodeLibraries.html">CodeLibraries</a></li>
+	<li><a href="CodeScripts.html">CodeScripts</a></li>
 	<li><a href="DevelopmentStyle.html">DevelopmentStyle</a></li>
 	<li><a href="ForumPosts.html">ForumPosts</a></li>
 	<li><a href="FrontPage.html">FrontPage</a></li>
 	<li><a href="Home.html">Home</a></li>
-	<li><a href="Libraries.html">Libraries</a></li>
 	<li><a href="MetatraderWithPython.html">MetatraderWithPython</a></li>
 	<li><a href="OTLibPy27.html">OTLibPy27</a></li>
 	<li><a href="OTLibPyLog.html">OTLibPyLog</a></li>
@@ -23,7 +24,6 @@
 	<li><a href="OTPyChart.html">OTPyChart</a></li>
 	<li><a href="ProjectHistory.html">ProjectHistory</a></li>
 	<li><a href="RoadMap.html">RoadMap</a></li>
-	<li><a href="Scripts.html">Scripts</a></li>
 	<li><a href="SomeNotes.html">SomeNotes</a></li>
 	<li><a href="TestedVersions.html">TestedVersions</a></li>
 	<li><a href="Testing.html">Testing</a></li>
