@@ -7,7 +7,7 @@
 </head>
 <body>
 <!-- <h1>Usage</h1> -->
-<h4>Initialization Code</h4>
+<h3>Initialization Code</h3>
 
 <p>The initialization code <tt>iPyInit</tt> in <tt>MQL4/Include/OTMql4/OTPy27.mqh</tt><br />
 initializes the Python environment. This should be called from your<br />
@@ -29,7 +29,7 @@ that directory to give some added functionality. If it can't import<br />
 the module <tt>OTMql427</tt> it will signal a panic by returning -1: you<br />
 should fix the problem before going any futher.</p>
 
-<h4>Global Variables</h4>
+<h3>Global Variables</h3>
 
 <p>The <tt>iPyInit</tt> initialization creates a temporary global veriable<br />
 called <tt>fPythonUsers</tt> and increments it by one each time it is<br />
@@ -51,7 +51,7 @@ veriable called "fDebugLevel" which is used by the logging code, and<br />
 it ranges from 0 to 5: 0 : quiet, 1 : +errors, 2 : +warnings, 3 =<br />
 +info, 4 : +debug, 5 : +trace.</p>
 
-<h4>Added Python Functionality</h4>
+<h3>Added Python Functionality</h3>
 
 <p>In many cases, you should use <tt>uPySafeEval</tt> to evaluate a python<br />
 expression that will evaluate to a string and return its value. It calls<br />
@@ -65,5 +65,9 @@ the error is returned as a string, prepended with <tt>ERROR: </tt>.</p>
       Print("Error in Python evaluating: " + uSource + "\n" + res);
       &lt;do something as a result of the failure&gt;
     }
-</pre></body>
+</pre>
+
+<hr />
+
+<p>Parent: <a href="Home.html">Home</a></p></body>
 </html>
