@@ -1,0 +1,12 @@
+===  Libraries
+
+
+See [[MQL4/Libraries/OTMql4/|https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Libraries/OTMql4]]
+
+
+*  [[OTLibPy27]]
+*  [[OTLibPyLog]]
+*  [[OTPyChart]]
+
+This file is automatically generated from the source code: do not edit.
+----
