@@ -5,3 +5,6 @@ See [[MQL4/Scripts/OTMql4/|https://github.com/OpenTrading/OTMql4Py/raw/master/MQ
 
 
 *  [[OTMql4PyTest]]
+
+This file is automatically generated from the source code: do not edit.
+----
