@@ -90,3 +90,11 @@ not be exposed to handles of python objects.
 
 {{{string uChartName(string uSymbol, int iPeriod, long iWindowId, int iExtra=0) }}}
     We will need a unique identifier for each chart
+
+Source code: [[MQL4/Libraries/OTMql4/OTLibPy27.mq4|https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Libraries/OTMql4/OTLibPy27.mq4]]
+
+
+
+This file is automatically generated from the source code: do not edit.
+----
+Parent: [[CodeLibraries]]
