@@ -19,3 +19,11 @@ string dLogArray[] = {"PANIC", "ERROR", "WARNING", "INFO", "DEBUG", "TRACE"};
 {{{void vLog (int iLevel, string uMsg) }}}
     We introduce 6 levels of logging: 0 - 5;
     a level of 0 is usually a panic and raises a messagebox
+
+Source code: [[MQL4/Libraries/OTMql4/OTLibPyLog.mq4|https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Libraries/OTMql4/OTLibPyLog.mq4]]
+
+
+
+This file is automatically generated from the source code: do not edit.
+----
+Parent: [[CodeLibraries]]
