@@ -2,8 +2,8 @@
 
 
 A simple test Script that doesn't do much, but it's a start.
-Attach it to a chart, and a MessageBox will pop up to tell you
-if it passed or failed.
+Attach it to a chart, select the tests you want to run,
+and a MessageBox will pop up to tell you if it passed or failed.
 We will put each test as a boolean external input so the user
 can select which tests to run.
 
@@ -34,3 +34,8 @@ can select which tests to run.
 Source code: [[MQL4/Scripts/OTMql4/OTMql4PyTest.mq4|https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Scripts/OTMql4/OTMql4PyTest.mq4]]
 
 
+
+This file is automatically generated from the source code: do not edit.
+----
+Parent: [[CodeScripts]]
+Parent: [[Home]]
