@@ -7,3 +7,12 @@
 {{{string eReturnOnPub(string uChartId, string uType, string uMess, string uOriginCmd="") }}}
 
 {{{string eReturnOnReqRep(string uChartId, string uType, string uMess, string uOriginCmd="") }}}
+
+Source code: [[MQL4/Libraries/OTMql4/OTPyChart.mq4|https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Libraries/OTMql4/OTPyChart.mq4]]
+
+
+
+This file is automatically generated from the source code: do not edit.
+----
+Parent: [[CodeLibraries]]
+Parent: [[Home]]
