@@ -5,11 +5,10 @@ https://sites.google.com/site/prof7bit/metatrader-python-integration
 There are contributions by C. Polymeris
 http://chiselapp.com/user/polymeris/repository/metatraderpy/index
 
-
 OTMql4Py has some changes to how the compiled dll code is used,
 and includes a Python file {{{OTMql427.py}}} with extra functionality.
 
-=== Unicode Functions
+=== Unicode Functions ===
 
 Build 600 of Metatrader4 changed the definition of the fundamental datatype
 {{{string}}} from being ASCII to being Unicode, and broke every compiled
@@ -24,3 +23,7 @@ in Metatrader4 >600: they are simply arrays of {{{uchar}}}, and there
 are conversion functions such as {{{StringToCharArray}}}.
 
  
+* [[SomeNotes]]
+
+----
+Parent: [[Home]]
