@@ -1,4 +1,5 @@
 Please report any system it works or doesn't work on in the wiki:
 include the Metatrader build number, the origin of the metatrader exe,
-the Windows version, and the Python version of the Python pyzmq, or whatever the other end is.
+the Windows version, and the Python version of the Python pyzmq, or
+whatever the other end is.
 
